fixing character encoding and syntax highlighting wrapping (#6)

--- a/assets/scss/hugo-syntax.scss
+++ b/assets/scss/hugo-syntax.scss
@@ -74,6 +74,11 @@
 div.highlight > pre.chroma {
   padding: 4px 10px;
   background-color: #f0f0f0;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
 }
 
 div.highlight > div.chroma > table {
